# -AI-

./: .env.example  README.md  RagKbDemoApplication.java  admin-interface-api-extension.js  admin.html  index.html  user-interface-api-extension.js
ProofQuery/: .env.example  .gitignore  README.md
ProofQuery/backend/: pyproject.toml
ProofQuery/backend/src/proofquery/: __init__.py  agent.py  app.py  config.py  errors.py  evidence.py  intake.py  models.py  profiler.py  query.py  sessions.py  sql_policy.py
ProofQuery/backend/tests/: __init__.py  conftest.py  e2e_app.py  test_agent.py  test_api.py  test_config.py  test_evidence.py  test_intake.py  test_profiler.py  test_query.py  test_sessions.py  test_sql_policy.py
ProofQuery/frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
ProofQuery/sample-data/: sales.csv
backend/db/: README.md  demo-data.sql  init.sql
backend/rag-kb-demo/: pom.xml
data/sample/: manual_chunks.sample.jsonl
db/: schema.sql
db/migrations/: 001_create_database_foundation.sql
db/seeds/: 001_sample_data.sql
docs/: curl-repair-orders.md  database-connection-check.md  database-environment-check.md  database-er-diagram.mmd  database-initialization-guide.md  database-model.md  database-schema-guide.md  database-scope.md  database-verification-report.md  sample-data-guide.md
frontend/rag-kb-web/: .gitignore  package-lock.json  package.json
rag-kb-web/: index.html
scripts/: check_db_connection.py
前端/: index.html  package-lock.json  package.json  vite.config.js
前端/src/: App.vue  styles.css
(+118 files in other folders)
