[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "proofquery"
version = "0.1.0"
description = "Evidence-backed local CSV analysis"
requires-python = ">=3.12"
dependencies = [
  "charset-normalizer>=3.4,<4",
  "duckdb>=1.2,<2",
  "fastapi>=0.115,<1",
  "openai>=1.66,<3",
  "pydantic-settings>=2.7,<3",
  "python-multipart>=0.0.20,<1",
  "sqlglot>=25,<30",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --basetemp=backend/.pytest-tmp"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]
testpaths = ["tests"]
